syntax = "proto3";

package patient.events;

// Generate multiple Java files, one per message
option java_multiple_files = true;

message PatientEvent {
    string patient_id = 1;
    string name = 2;
    string email = 3;
    string event_type = 4;
}
